Change auto-assign assignee from TrevorSchirmer to bharvey88

--- a/.github/workflows/autoassign.yml
+++ b/.github/workflows/autoassign.yml
@@ -15,5 +15,5 @@ jobs:
       uses: pozil/auto-assign-issue@v1
       with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          assignees: TrevorSchirmer
+          assignees: bharvey88
           numOfAssignee: 1
